# Cardine

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  skills-lock.json
.agents/skills/agic-docx/: SKILL.md  pyproject.toml
.agents/skills/agic-docx/assets/: agic-template.docx
.agents/skills/agic-docx/ooxml/scripts/validation/: redlining.py
.agents/skills/agic-docx/references/: STYLE_MAP.md  ooxml.md  template-styles.json  workflows.md
.agents/skills/agic-docx/scripts/: append_content.py  convert_to_agic.py  create_document.py  document.py  list_template_styles.py  markdown_parser.py  markdown_to_docx.py  mermaid_renderer.py  style_mapper.py  verify_agic_template_parts.py
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
docs/adr/: 0001-azure-openai-llm-provider.md  0002-rest-monolith-fase-1.md  0003-postgresql-no-vector-db.md  0004-azure-infra-spec.md
docs/marketing/: documento_giudici.md  strategia_marketing.md
docs/offerta/: analisi-architettura-stima.docx  analisi-architettura-stima.md  cardine-presentazione.pptx  stitch-design-spec.md
infra/: .gitignore  README.md  appgw.tf  appservice.tf  database.tf  dns.tf  frontend.tf  keyvault.tf  main.tf  monitoring.tf  network.tf  openai.tf  outputs.tf  providers.tf  storage.tf  variables.tf
infra/env/: demo.tfvars.example
mock-json/: career_map.json
mock-json/cv/: 01_giulia_ferraro.json  02_marco_bianchi.json  03_alessandra_conti.json  04_davide_romano.json  05_francesco_greco.json  06_sara_esposito.json
src/backend/: .env.example  openapi.yaml  package-lock.json  package.json  server.ts  (+2 more)
(+69 files in other folders)
